--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@supabase/supabase-js": "^2.82.0",
     "@upstash/ratelimit": "^2.0.7",
     "@upstash/redis": "^1.35.6",
-    "next": "16.0.3",
+    "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "zod": "^4.1.12"
